k8s/ingress.yml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
    - host: 0.0.0.0
      http:
        paths:
          - path: /api/
            backend:
              serviceName: kubernetes-django-service
              servicePort: 8000
          - path: /admin/
            backend:
              serviceName: kubernetes-django-service
              servicePort: 8000
          - path: /static/
            backend:
              serviceName: kubernetes-django-service
              servicePort: 8000
          - path: /
            backend:
              serviceName: kubernetes-frontend-service
              servicePort: 80
